--- a/LoL/LoL/MainWindow.xaml
+++ b/LoL/LoL/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="LoL.MainWindow"
         Title="League Scanner" Height="768" Width="1024" WindowStartupLocation="CenterScreen" AllowsTransparency="True" WindowStyle="None"
         MinWidth="800"
-        MinHeight="600">
+        MinHeight="600" SizeChanged="Window_SizeChanged">
     <Window.Resources>
         <LinearGradientBrush x:Key="ContentBack">
             <LinearGradientBrush.GradientStops>
@@ -358,7 +358,7 @@
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition/>
                                     </Grid.ColumnDefinitions>
-                                    <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" >
+                                    <StackPanel x:Name="pnlValues"  Grid.Row="0" Grid.Column="0" Orientation="Vertical" >
                                         <Grid >
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="24"/>
@@ -427,14 +427,17 @@
 
                                             <Rectangle Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="6" Fill="#0f0f0f" Margin="1 1 1 1"/>
                                             <Rectangle Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="6" Grid.RowSpan="4" Fill="#1b1b1b" Margin="1 1 1 1"/>
-                                            <Rectangle Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="6" Fill="#1b1b1b" Margin="1 1 1 1" Height="1000"/>
+
+                                            <Canvas x:Name="canvas"  Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="6" Margin="1 1 1 1" Background="#1b1b1b">
+                                                <Rectangle Fill="#1b1b1b" Width="533" Height="22"/>
+                                            </Canvas>
                                             
                                             
                                             <TextBlock Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="6" FontSize="16" Margin="10 0 10 0" ><Run Text="Ranked Averages:"/></TextBlock>
                                             <TextBlock Grid.Row="10" Grid.Column="0" FontSize="14" Margin="5 0 10 0" ><Run Text="Average KDA:"/></TextBlock>
                                             <TextBlock Grid.Row="10" Grid.Column="1" FontSize="14" Text="{Binding AverageKDA}" Foreground="White"/>
                                             <!-- <TextBlock Grid.Row="1" Grid.Column="3" FontSize="14" Text="{Binding AverageKills}" Foreground="Green"/> -->
-                                            <TextBlock Grid.Row="11" Grid.Column="0" FontSize="14" Margin="5 0 0 0" ><Run Text="Average Gold:"/></TextBlock>
+                                            <TextBlock x:Name="tb11"  Grid.Row="11" Grid.Column="0" FontSize="14" Margin="5 0 0 0" ><Run Text="Average Gold:"/></TextBlock>
                                             <TextBlock Grid.Row="11" Grid.Column="1" FontSize="14" Text="{Binding AverageGold}" Foreground="White"/>
                                             <TextBlock Grid.Row="12" Grid.Column="0"  FontSize="14" Margin="5 0 0 0" ><Run Text="Average Farm:"/></TextBlock>
                                             <TextBlock Grid.Row="12" Grid.Column="1"  FontSize="14" Text="{Binding AverageFarm}" Foreground="White"/>
@@ -486,7 +489,8 @@
                         </Grid>
                         <Border Grid.Row="3" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="2" BorderThickness="0.3 0 0.3 0" SnapsToDevicePixels="True"/>
                         <Rectangle Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Fill="#0f0f0f" Margin="1 1 1 1"/>
-                        <TextBlock Margin="10 0 0 0" VerticalAlignment="Center" Grid.Row="3" Grid.ColumnSpan="2"><Run Text="Recent Champs"/></TextBlock>
+                        <Rectangle Grid.Row="4" Grid.Column="0"  Fill="#1b1b1b" Margin="1 1 1 1"/>
+                        <TextBlock x:Name="tbRecentChamps"  Margin="10 0 0 0" VerticalAlignment="Center" Grid.Row="3" Grid.ColumnSpan="2"><Run Text="Recent Champs"/></TextBlock>
                         <Grid Grid.Row="4" Grid.ColumnSpan="2">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
@@ -496,6 +500,7 @@
                                 <!--  <ColumnDefinition Width="*"/> -->
                             </Grid.ColumnDefinitions>
                             <Border Grid.Row="0" Grid.Column="0" BorderBrush="White" BorderThickness="0.3 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
+                            <Rectangle Grid.Row="3" Grid.Column="0"  Fill="#1b1b1b" Margin="1 1 1 1"/>
                             <Image Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="1 1 1 1"  Source="{Binding RChamp1Image}" Opacity="0.7"/>
                             <StackPanel Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" >
                                 <TextBlock FontSize="16" HorizontalAlignment="Center" Text="{Binding RChamp1Name}"/>
@@ -510,6 +515,7 @@
                                         <ColumnDefinition/>
                                         <ColumnDefinition/>
                                     </Grid.ColumnDefinitions>
+                                    
                                     <TextBlock Grid.Row="0" Grid.Column="0" FontSize="12" Margin="0 0 10 0" ><Run Text="Kills:"/></TextBlock>
                                     <TextBlock Grid.Row="0" Grid.Column="1" FontSize="12" Text="{Binding RChamp1Kills}" Foreground="White"/>
                                     <TextBlock Grid.Row="1" Grid.Column="0" FontSize="12" Margin="0 0 10 0" ><Run Text="Deaths:"/></TextBlock>
@@ -521,6 +527,7 @@
                                 </Grid>
                             </StackPanel>
                             <Border Grid.Row="0" Grid.Column="1" BorderBrush="White" BorderThickness="0 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
+                            <Rectangle Grid.Row="3" Grid.Column="1"  Fill="#1b1b1b" Margin="1 1 1 1"/>
                             <Image Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="1 1 1 1"  Source="{Binding RChamp2Image}" Opacity="0.7"/>
                             <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" >
                                 <TextBlock FontSize="16" HorizontalAlignment="Center" Text="{Binding RChamp2Name}"/>
@@ -546,6 +553,7 @@
                                 </Grid>
                             </StackPanel>
                             <Border Grid.Row="0" Grid.Column="2" BorderBrush="White" BorderThickness="0 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
+                            <Rectangle Grid.Row="3" Grid.Column="2"  Fill="#1b1b1b" Margin="1 1 1 1"/>
                             <Image Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="1 1 1 1"  Source="{Binding RChamp3Image}" Opacity="0.7"/>
                             <StackPanel Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" >
                                 <TextBlock FontSize="16" HorizontalAlignment="Center" Text="{Binding RChamp3Name}"/>
@@ -571,6 +579,7 @@
                                 </Grid>
                             </StackPanel>
                             <Border Grid.Row="0" Grid.Column="3" BorderBrush="White" BorderThickness="0 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
+                            <Rectangle Grid.Row="3" Grid.Column="4"  Fill="#1b1b1b" Margin="1 1 1 1"/>
                             <Image Grid.Row="0" Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="1 1 1 1"  Source="{Binding RChamp4Image}" Opacity="0.7"/>
                             <StackPanel Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" >
                                 <TextBlock FontSize="16" HorizontalAlignment="Center" Text="{Binding RChamp4Name}"/>
