--- a/LoL/LoL/MainWindow.xaml
+++ b/LoL/LoL/MainWindow.xaml
@@ -20,7 +20,7 @@
             <TextBlock MouseLeftButtonDown="TextBlock_MouseLeftButtonDown" Margin="5" Foreground="White" FontWeight="Bold">
           	</TextBlock>
        
-            <Border DockPanel.Dock="Top" Width="728" Height="90" HorizontalAlignment="Center"  VerticalAlignment="Top"   Name="_webBrowserPlacementTarget" BorderBrush="Blue" BorderThickness="0" Margin="283,25,5,0"  />
+            <Border Visibility="Collapsed"  DockPanel.Dock="Top" Width="728" Height="90" HorizontalAlignment="Center"  VerticalAlignment="Top"   Name="_webBrowserPlacementTarget" BorderBrush="Blue" BorderThickness="0" Margin="283,25,5,0"  />
             <Button Background="Gold" Focusable="False" HorizontalAlignment="Right" VerticalAlignment="Top"  Foreground="#000066" Width="20" Margin="2,2,5,2" Click="Form_Close">x</Button>
             <Button x:Name="btnMinimize"  Background="Gold" Focusable="False" HorizontalAlignment="Right" VerticalAlignment="Top" Foreground="#000066" Width="20" Margin="2,2,27,2" Click="Form_max_restore">har)0x221A</Button>
             <Button  Background="Gold" Focusable="False" HorizontalAlignment="Right" VerticalAlignment="Top" Foreground="#000066" Width="20" Margin="2,2,50,2" Click="Form_Min">_</Button>
