--- a/LoL/LoL/MainWindow.xaml
+++ b/LoL/LoL/MainWindow.xaml
@@ -679,8 +679,35 @@
                     </Grid>
 
                 </TabItem>
-
-
+                <TabItem Header="Game" FontSize="16"  Padding="0,0,0,0" IsEnabled="{Binding TabPagesEnabled}">
+                    <TabItem.Style>
+                        <Style TargetType="{x:Type TabItem}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type TabItem}">
+                                        <StackPanel Orientation="Horizontal">
+                                            <!--<Image x:Name="Img" Source="pack://application:,,,/LoL;component/summonerbutton1.png" Stretch="Fill" /> -->
+                                            <TextBlock x:Name="tbGame" Text="Game" Padding="5" Margin="1" Background="#0f0f0f"></TextBlock>
+                                        </StackPanel>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsSelected" Value="True">
+                                                <Setter TargetName="tbGame" Property="Opacity" Value="1" />
+                                                <Setter Property="Foreground" Value="White" />
+                                            </Trigger>
+                                            <Trigger Property="IsSelected" Value="False">
+                                                <Setter Property="Foreground" Value="White"/>
+                                                <Setter TargetName="tbGame" Property="Opacity" Value="0.7" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </TabItem.Style>
+                    <Grid  Margin="-1 -1 -1 -1" Background="#1b1b1b">
+                        <TextBlock Visibility="{Binding GameErrorVisibility}" Text="{Binding GameSummonerError}" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0 50 0 0" FontSize="20"/>
+                    </Grid>
+                </TabItem>
             </TabControl>
         </Grid>
     </Border>
