--- a/LoL/LoL/MainWindow.xaml
+++ b/LoL/LoL/MainWindow.xaml
@@ -705,65 +705,80 @@
                         </Style>
                     </TabItem.Style>
                     <Grid  Margin="-1 -1 -1 -1" Background="#1b1b1b" >
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
-                        <Border Grid.Row="0" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="1" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="2" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="3" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="4" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="5" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="6" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="7" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="8" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="9" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="10" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="11" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="12" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="13" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
-                        <Border Grid.Row="14" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
                         <TextBlock Visibility="{Binding GameErrorVisibility}" Text="{Binding GameSummonerError}" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0 50 0 0" FontSize="20"/>
-                        <TextBlock Grid.Row="0" Grid.Column="0"  Text="Name" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="0" Grid.Column="1"  Text="Champion" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="0" Grid.Column="2"  Text="Current Season" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="0" Grid.Column="3"  Text="Wins" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="0" Grid.Column="4"  Text="Ranked Wins" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="0" Grid.Column="5"  Text="KDA" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="0" Grid.Column="6"  Text="Runes" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="0" Grid.Column="7"  Text="Masteries" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="8" Grid.Column="0"  Text="Name" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="8" Grid.Column="1"  Text="Champion" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="8" Grid.Column="2"  Text="Current Season" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="8" Grid.Column="3"  Text="Wins" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="8" Grid.Column="4"  Text="Ranked Wins" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="8" Grid.Column="5"  Text="KDA" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="8" Grid.Column="6"  Text="Runes" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="8" Grid.Column="7"  Text="Masteries" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Grid Visibility="{Binding GameVisibility}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="20*"/>
+                                <ColumnDefinition Width="10*"/>
+                                <ColumnDefinition Width="10*"/>
+                                <ColumnDefinition Width="10*"/>
+                                <ColumnDefinition Width="10*"/>
+                                <ColumnDefinition Width="10*"/>
+                                <ColumnDefinition Width="10*"/>
+                                <ColumnDefinition Width="10*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Border Grid.Row="0" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="1" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="2" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="3" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="4" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="5" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="6" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="7" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="8" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="9" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="10" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="11" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="12" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="13" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0" SnapsToDevicePixels="True"/>
+                            <Border Grid.Row="14" Grid.Column="0" BorderBrush="White"  Grid.ColumnSpan="8" BorderThickness="0.3 0.3 0.3 0.3" SnapsToDevicePixels="True"/>
+                            <TextBlock Grid.Row="0" Grid.Column="0"  Text="Name" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="0" Grid.Column="1"  Text="Champion" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="0" Grid.Column="2"  Text="Current Season" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="0" Grid.Column="3"  Text="Wins" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="0" Grid.Column="4"  Text="Ranked Wins" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="0" Grid.Column="5"  Text="KDA" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="0" Grid.Column="6"  Text="Runes" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="0" Grid.Column="7"  Text="Masteries" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="8" Grid.Column="0"  Text="Name" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="8" Grid.Column="1"  Text="Champion" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="8" Grid.Column="2"  Text="Current Season" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="8" Grid.Column="3"  Text="Wins" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="8" Grid.Column="4"  Text="Ranked Wins" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="8" Grid.Column="5"  Text="KDA" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="8" Grid.Column="6"  Text="Runes" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="8" Grid.Column="7"  Text="Masteries" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
+                            <TextBlock Grid.Row="1" Grid.Column="0"  Text="{Binding Path=OurTeam[0].Name}" Margin="5 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="14"/>
+                            <TextBlock Grid.Row="2" Grid.Column="0"  Text="{Binding Path=OurTeam[1].Name}" Margin="5 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="14"/>
+                            <TextBlock Grid.Row="3" Grid.Column="0"  Text="{Binding Path=OurTeam[2].Name}" Margin="5 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="14"/>
+                            <TextBlock Grid.Row="4" Grid.Column="0"  Text="{Binding Path=OurTeam[3].Name}" Margin="5 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="14"/>
+                            <TextBlock Grid.Row="5" Grid.Column="0"  Text="{Binding Path=OurTeam[4].Name}" Margin="5 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="14"/>
+
+                            <TextBlock Grid.Row="9" Grid.Column="0"  Text="{Binding Path=EnemyTeam[0].Name}" Margin="5 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="14"/>
+                            <TextBlock Grid.Row="10" Grid.Column="0"  Text="{Binding Path=EnemyTeam[1].Name}" Margin="5 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="14"/>
+                            <TextBlock Grid.Row="11" Grid.Column="0"  Text="{Binding Path=EnemyTeam[2].Name}" Margin="5 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="14"/>
+                            <TextBlock Grid.Row="12" Grid.Column="0"  Text="{Binding Path=EnemyTeam[3].Name}" Margin="5 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="14"/>
+                            <TextBlock Grid.Row="13" Grid.Column="0"  Text="{Binding Path=EnemyTeam[4].Name}" Margin="5 0 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="14"/>
+
+                        </Grid>
                     </Grid>
                 </TabItem>
             </TabControl>
